# online_store

./: .env.sample  README.md  pyproject.toml
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_contacts.py  0002_product_created_by.py  0003_alter_product_created_by.py  0003_alter_product_price.py  0004_version.py
catalog/templates/catalog/: access_error.html  contact.html  index.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  products.html
catalog/templates/catalog/includes/: inc_app_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
news/: admin.py  forms.py  models.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_alter_article_options.py  0003_alter_article_slug_alter_article_views_count.py
news/templates/news/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html
users/: admin.py  forms.py  models.py  token.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: email_registration_sent.html  email_verification.html  email_verification_failed.html  email_verification_success.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  register.html  user_form.html
