[tool.poetry]
name = "online-store"
version = "0.1.0"
description = ""
authors = ["pozdniakova olga <caramelca07@mail.ru>"]
readme = "README.md"
packages = [{include = "online_store"}]

[tool.poetry.dependencies]
python = "^3.11"
poetry = "^1.5.1"
django = "^4.2.3"
psycopg2-binary = "^2.9.7"
pillow = "^10.0.0"
ipython = "^8.14.0"
pytils = "^0.4.1"
redis = "^5.0.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
